// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Snapshots should match snapshot with checked checkbox 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  background-color: #D8385E;
  border-radius: 4px;
  border-width: 2px;
  border-color: #D8385E;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: #FFFFFF;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 16px;
  color: #231B22;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c10 .c2:active .c4,
.c10:focus-within .c4,
.c10:hover .c4 {
  display: block;
}

.c10:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c10:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c10 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c11 .c2:active .c4,
.c11:focus-within .c4,
.c11:hover .c4 {
  display: block;
}

.c11:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c11:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c11 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c1:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c1 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #6B6B78;
  font-size: 14px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
        >
          <svg
            height="24"
            width="24"
          />
        </div>
        <input
          checked=""
          class="c7"
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with default checkbox 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  background-color: transparent;
  border-radius: 4px;
  border-width: 2px;
  border-color: #9898A6;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: #FFFFFF;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 16px;
  color: #231B22;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c1:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c1 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #6B6B78;
  font-size: 14px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
        />
        <input
          class="c7"
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with disabled and checked checkbox 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
  cursor: not-allowed;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  background-color: #D7D7E0;
  border-radius: 4px;
  border-width: 2px;
  border-color: #D7D7E0;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: #FFFFFF;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 16px;
  color: #231B22;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c10 .c2:active .c4,
.c10:focus-within .c4,
.c10:hover .c4 {
  display: block;
}

.c10:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c10:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c10 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c11 .c2:active .c4,
.c11:focus-within .c4,
.c11:hover .c4 {
  display: block;
}

.c11:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c11:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c11 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c12 .c2:active .c4,
.c12:focus-within .c4,
.c12:hover .c4 {
  display: block;
}

.c12:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c12:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c12 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c1:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c1 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #6B6B78;
  font-size: 14px;
}

<div>
  <div
    class="c0"
    disabled=""
  >
    <div
      class="c1"
      disabled=""
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
          disabled=""
        >
          <svg
            height="24"
            width="24"
          />
        </div>
        <input
          checked=""
          class="c7"
          disabled=""
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with disabled checkbox 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
  cursor: not-allowed;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  background-color: transparent;
  border-radius: 4px;
  border-width: 2px;
  border-color: #D7D7E0;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: #FFFFFF;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 16px;
  color: #231B22;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c10 .c2:active .c4,
.c10:focus-within .c4,
.c10:hover .c4 {
  display: block;
}

.c10:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c10:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c10 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c1:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c1 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #6B6B78;
  font-size: 14px;
}

<div>
  <div
    class="c0"
    disabled=""
  >
    <div
      class="c1"
      disabled=""
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
          disabled=""
        />
        <input
          class="c7"
          disabled=""
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with error and checked checkbox 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  background-color: #FF874C;
  border-radius: 4px;
  border-width: 2px;
  border-color: #FF874C;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: #FFFFFF;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 16px;
  color: #231B22;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c10 .c2:active .c4,
.c10:focus-within .c4,
.c10:hover .c4 {
  display: block;
}

.c10:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c10:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c10 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c11 .c2:active .c4,
.c11:focus-within .c4,
.c11:hover .c4 {
  display: block;
}

.c11:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c11:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c11 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c1:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c1 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c12 .c2:active .c4,
.c12:focus-within .c4,
.c12:hover .c4 {
  display: block;
}

.c12:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c12:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c12 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #FF874C;
  font-size: 14px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
        >
          <svg
            height="24"
            width="24"
          />
        </div>
        <input
          checked=""
          class="c7"
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Error msg
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with error checkbox 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  background-color: transparent;
  border-radius: 4px;
  border-width: 2px;
  border-color: #FF874C;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: #FFFFFF;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 16px;
  color: #231B22;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c1:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c1 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c10 .c2:active .c4,
.c10:focus-within .c4,
.c10:hover .c4 {
  display: block;
}

.c10:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c10:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c10 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c11 .c2:active .c4,
.c11:focus-within .c4,
.c11:hover .c4 {
  display: block;
}

.c11:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c11:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c11 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c12 .c2:active .c4,
.c12:focus-within .c4,
.c12:hover .c4 {
  display: block;
}

.c12:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c12:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c12 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #FF874C;
  font-size: 14px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
        />
        <input
          class="c7"
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Error msg
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with inverted 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  background-color: transparent;
  border-radius: 4px;
  border-width: 2px;
  border-color: #FFFFFF;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: #D8385E;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 16px;
  color: #231B22;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c10 .c2:active .c4,
.c10:focus-within .c4,
.c10:hover .c4 {
  display: block;
}

.c10:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c10:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c10 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c11 .c2:active .c4,
.c11:focus-within .c4,
.c11:hover .c4 {
  display: block;
}

.c11:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c11:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c11 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c12 .c2:active .c4,
.c12:focus-within .c4,
.c12:hover .c4 {
  display: block;
}

.c12:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c12:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c12 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c13 .c2:active .c4,
.c13:focus-within .c4,
.c13:hover .c4 {
  display: block;
}

.c13:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c13:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c13 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1:hover .c4 {
  background-color: rgba(255,255,255,0.25);
  box-shadow: 0 0 0 8px  rgba(255,255,255,0.25);
}

.c1:focus-within .c4 {
  background-color: rgba(255,255,255,0.5);
  box-shadow: 0 0 0 8px  rgba(255,255,255,0.5);
}

.c1 .c2:active .c4 {
  background-color: rgba(255,255,255,0.75);
  box-shadow: 0 0 0 8px  rgba(255,255,255,0.75);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #6B6B78;
  font-size: 14px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
        />
        <input
          class="c7"
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with inverted and checked 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border-width: 2px;
  border-color: #FFFFFF;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: #D8385E;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 16px;
  color: #231B22;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c10 .c2:active .c4,
.c10:focus-within .c4,
.c10:hover .c4 {
  display: block;
}

.c10:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c10:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c10 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c11 .c2:active .c4,
.c11:focus-within .c4,
.c11:hover .c4 {
  display: block;
}

.c11:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c11:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c11 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c12 .c2:active .c4,
.c12:focus-within .c4,
.c12:hover .c4 {
  display: block;
}

.c12:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c12:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c12 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c13 .c2:active .c4,
.c13:focus-within .c4,
.c13:hover .c4 {
  display: block;
}

.c13:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c13:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c13 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1:hover .c4 {
  background-color: rgba(255,255,255,0.25);
  box-shadow: 0 0 0 8px  rgba(255,255,255,0.25);
}

.c1:focus-within .c4 {
  background-color: rgba(255,255,255,0.5);
  box-shadow: 0 0 0 8px  rgba(255,255,255,0.5);
}

.c1 .c2:active .c4 {
  background-color: rgba(255,255,255,0.75);
  box-shadow: 0 0 0 8px  rgba(255,255,255,0.75);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #6B6B78;
  font-size: 14px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
        >
          <svg
            height="24"
            width="24"
          />
        </div>
        <input
          checked=""
          class="c7"
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot with inverted and checked and disabled 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
  cursor: not-allowed;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  background-color: #D7D7E0;
  border-radius: 4px;
  border-width: 2px;
  border-color: #D7D7E0;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: #FFFFFF;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 16px;
  color: #231B22;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c10 .c2:active .c4,
.c10:focus-within .c4,
.c10:hover .c4 {
  display: block;
}

.c10:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c10:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c10 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c11 .c2:active .c4,
.c11:focus-within .c4,
.c11:hover .c4 {
  display: block;
}

.c11:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c11:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c11 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

.c12 .c2:active .c4,
.c12:focus-within .c4,
.c12:hover .c4 {
  display: block;
}

.c12:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c12:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c12 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c13 .c2:active .c4,
.c13:focus-within .c4,
.c13:hover .c4 {
  display: block;
}

.c13:hover .c4 {
  background-color: rgba(216,56,94,0.25);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.25);
}

.c13:focus-within .c4 {
  background-color: rgba(216,56,94,0.5);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.5);
}

.c13 .c2:active .c4 {
  background-color: rgba(216,56,94,0.75);
  box-shadow: 0 0 0 8px  rgba(216,56,94,0.75);
}

.c14 .c2:active .c4,
.c14:focus-within .c4,
.c14:hover .c4 {
  display: block;
}

.c14:hover .c4 {
  background-color: rgba(255,255,255,0.25);
  box-shadow: 0 0 0 8px  rgba(255,255,255,0.25);
}

.c14:focus-within .c4 {
  background-color: rgba(255,255,255,0.5);
  box-shadow: 0 0 0 8px  rgba(255,255,255,0.5);
}

.c14 .c2:active .c4 {
  background-color: rgba(255,255,255,0.75);
  box-shadow: 0 0 0 8px  rgba(255,255,255,0.75);
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1:hover .c4 {
  background-color: rgba(255,255,255,0.25);
  box-shadow: 0 0 0 8px  rgba(255,255,255,0.25);
}

.c1:focus-within .c4 {
  background-color: rgba(255,255,255,0.5);
  box-shadow: 0 0 0 8px  rgba(255,255,255,0.5);
}

.c1 .c2:active .c4 {
  background-color: rgba(255,255,255,0.75);
  box-shadow: 0 0 0 8px  rgba(255,255,255,0.75);
}

.c8 {
  width: 100%;
  margin-top: 4px;
}

.c9 {
  color: #6B6B78;
  font-size: 14px;
}

<div>
  <div
    class="c0"
    disabled=""
  >
    <div
      class="c1"
      disabled=""
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
          disabled=""
        >
          <svg
            height="24"
            width="24"
          />
        </div>
        <input
          checked=""
          class="c7"
          disabled=""
          type="checkbox"
        />
        Checkbox Component
      </label>
    </div>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Helper Text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Snapshots should match snapshot without props 1`] = `
.c7 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
}

.c0 * {
  box-sizing: border-box;
}

.c6 {
  position: relative;
  border-style: solid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 8px;
  background-color: transparent;
  border-radius: 4px;
  border-width: 2px;
  border-color: #9898A6;
}

.c6 svg {
  position: absolute;
  top: 50%;
  left: 50%;
  fill: #FFFFFF;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 16px;
  color: #231B22;
}

.c5 {
  position: absolute;
  display: none;
  width: 24px;
  height: 24px;
  border-radius: 9999px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .c2:active .c4,
.c1:focus-within .c4,
.c1:hover .c4 {
  display: block;
}

.c1:hover .c4 {
  background-color: rgba(245,245,250,0.25);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.25);
}

.c1:focus-within .c4 {
  background-color: rgba(245,245,250,0.5);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.5);
}

.c1 .c2:active .c4 {
  background-color: rgba(245,245,250,0.75);
  box-shadow: 0 0 0 8px  rgba(245,245,250,0.75);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2 c3"
      >
        <span
          class="c4 c5"
        />
        <div
          class="c6"
        />
        <input
          class="c7"
          type="checkbox"
        />
      </label>
    </div>
  </div>
</div>
`;
